Dark mode work fine, all background colors are changing, font color of tasks changes correctly and added correctly whether the app is in light mode or dark mode

--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ body {
 }
 
 .mainApp {
-    /* height: 60%;
-    width: 50%; */
     height: 30rem;
     width: 25rem;
     border: 1px solid black;
@@ -45,12 +43,10 @@ body {
     justify-content: space-around;
     width: 100%;
     height: 2rem;
-    /* padding: 1rem 0rem; */
 }
 
 .taskListDiv {
     width: 100%;
-    padding-top: 0.5rem;
     overflow-y: scroll;
     height: 25rem;
 }
@@ -72,12 +68,28 @@ li {
     width: 30%;
 }
 
-.blue {
-    background-color: #89CFF0;
+.lightBlue {
+    background-color: #33CCFF;
 }
 
-.gold {
-    background-color: #FFD700;
+.darkBlue {
+    background-color: #3300CC;
+}
+
+.lightYellow {
+    background-color: #FFFF99;
+}
+
+.darkYellow {
+    background-color: #FF3300;
+}
+
+.white {
+    background-color: white;
+}
+
+.black {
+    background-color: #202020;
 }
 
 .showDoneButton {
@@ -92,4 +104,8 @@ li {
 
 .hide {
     display: none;
+}
+
+.whiteLetters {
+    color: white;
 }
